fix: update disclaimer styles for improved visibility and add missing .gitkeep files

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -6,8 +6,11 @@ img + em {
 }
 
 .disclaimer {
-    font-size: 12px;
+    font-size: 14px;
+    margin-bottom: 1.5em;
     @media (min-width: 940px) {
         padding-left: 2.5em;
+        padding-right: 2.5em;;
+        margin-bottom: 1.3334em;
     }
 }
